Bug 544702 - [12] unexpected fall-through in switch statement with switch-labeled-rule